--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1712,6 +1712,15 @@
     "df.index = df.index + 1\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()"
+   ]
   }
  ],
  "metadata": {
