--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,164 +12,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Options.binary_location = \"C:\\\\Program Files (x86)\\\\Google\\\\Chrome\\\\Application\\\\chrome.exe\"\n",
+    "webdriver_path = 'D:\\\\chromedriver.exe'\n",
+    "options = Options()\n",
+    "driver = webdriver.Chrome(executable_path=webdriver_path, options=options)\n",
+    "driver.get(\"https://stats.nba.com/players/traditional/?sort=PTS&dir=-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PLAYER TEAM AGE GP W L MIN PTS FGM FGA FG% 3PM 3PA 3P% FTM FTA FT% OREB DREB REB AST TOV STL BLK PF FP DD2 TD3 +/-\n",
-      "1\n",
-      "James Harden\n",
-      "HOU 30 57 38 19 36.8 34.9 10.1 23.0 43.9 4.6 12.8 35.8 10.2 11.8 86.7 1.1 5.2 6.3 7.4 4.4 1.7 0.9 3.4 57.0 18 3 5.3\n",
-      "2\n",
-      "Bradley Beal\n",
-      "WAS 26 54 18 36 35.9 30.4 10.4 22.8 45.5 2.9 8.3 34.5 6.8 8.1 84.0 1.0 3.4 4.3 6.1 3.4 1.2 0.4 2.2 46.2 8 0 -3.7\n",
-      "3\n",
-      "Trae Young\n",
-      "ATL 21 57 17 40 35.3 29.6 9.1 20.8 43.9 3.4 9.4 36.0 8.1 9.3 86.4 0.5 3.8 4.3 9.3 4.8 1.1 0.1 1.7 47.7 26 2 -3.8\n",
-      "4\n",
-      "Giannis Antetokounmpo\n",
-      "MIL 25 56 48 8 30.8 29.6 10.9 20.0 54.8 1.5 4.7 30.9 6.3 9.9 62.9 2.3 11.5 13.8 5.8 3.7 1.0 1.0 3.0 57.3 51 4 11.8\n",
-      "5\n",
-      "Damian Lillard\n",
-      "POR 29 55 26 29 36.9 29.4 9.3 20.3 46.1 3.9 9.9 39.6 6.8 7.6 89.0 0.5 3.8 4.3 7.9 2.9 1.0 0.3 1.7 47.5 16 1 1.3\n",
-      "6\n",
-      "Luka Doncic\n",
-      "DAL 21 50 32 18 33.1 28.5 9.4 20.3 46.1 2.8 9.0 31.6 6.9 9.1 76.0 1.3 8.2 9.5 8.8 4.3 1.0 0.2 2.5 52.4 33 14 5.4\n",
-      "7\n",
-      "Russell Westbrook\n",
-      "HOU 31 50 33 17 36.1 27.5 10.7 22.7 47.3 1.0 3.9 25.3 5.1 6.5 78.1 1.7 6.2 7.9 7.1 4.4 1.6 0.3 3.6 49.2 20 8 3.5\n",
-      "8\n",
-      "Kyrie Irving\n",
-      "BKN 27 20 8 12 32.9 27.4 10.0 20.8 47.8 2.8 7.1 39.4 4.7 5.1 92.2 1.1 4.1 5.2 6.4 2.6 1.4 0.5 2.7 46.1 3 1 -0.4\n",
-      "9\n",
-      "Kawhi Leonard\n",
-      "LAC 28 48 36 12 32.3 27.0 9.4 20.2 46.4 2.1 5.6 36.5 6.2 6.9 89.7 1.1 6.5 7.5 5.1 2.9 1.8 0.6 1.9 48.1 13 1 7.4\n",
-      "10\n",
-      "Anthony Davis\n",
-      "LAL 26 52 41 11 34.4 26.6 9.2 17.9 51.3 1.2 3.4 33.7 7.0 8.3 84.3 2.3 7.2 9.5 3.2 2.5 1.5 2.5 2.4 52.4 27 0 5.2\n",
-      "11\n",
-      "Karl-Anthony Towns\n",
-      "MIN 24 35 10 25 33.9 26.5 9.0 17.8 50.8 3.3 7.9 41.2 5.1 6.5 79.6 2.7 8.1 10.8 4.4 3.1 0.9 1.2 3.3 49.3 24 0 -0.4\n",
-      "12\n",
-      "Devin Booker\n",
-      "PHX 23 59 24 35 36.1 25.9 8.7 17.9 48.7 2.0 5.6 35.7 6.5 7.1 91.7 0.4 3.7 4.1 6.4 3.9 0.7 0.2 3.0 39.5 9 0 0.8\n",
-      "13\n",
-      "Zach LaVine\n",
-      "CHI 24 60 20 40 34.8 25.5 9.0 20.0 45.0 3.1 8.1 38.0 4.5 5.6 80.2 0.7 4.1 4.8 4.2 3.4 1.5 0.5 2.2 40.0 2 0 -3.2\n",
-      "14\n",
-      "LeBron James\n",
-      "LAL 35 57 45 12 34.9 25.4 9.7 19.6 49.7 2.2 6.3 35.1 3.8 5.4 69.3 1.0 6.8 7.8 10.7 4.0 1.2 0.5 1.7 52.0 41 13 8.1\n",
-      "15\n",
-      "Brandon Ingram\n",
-      "NOP 22 54 21 33 34.2 24.6 8.5 18.0 47.1 2.5 6.4 39.2 5.1 6.0 86.1 0.9 5.3 6.2 4.3 3.1 1.0 0.7 2.9 40.4 8 0 -0.5\n",
-      "16\n",
-      "Donovan Mitchell\n",
-      "UTA 23 60 38 22 34.4 24.6 9.1 19.8 45.8 2.5 6.8 36.5 4.0 4.7 85.7 0.7 3.7 4.4 4.3 2.7 1.0 0.2 2.5 37.4 1 0 2.2\n",
-      "17\n",
-      "Zion Williamson\n",
-      "NOP 19 17 8 9 29.5 24.0 9.2 15.8 58.2 0.3 0.7 41.7 5.4 8.4 64.1 3.1 3.8 6.8 2.2 2.6 0.9 0.4 1.8 36.6 2 0 5.8\n",
-      "18\n",
-      "Pascal Siakam\n",
-      "TOR 25 50 37 13 35.3 23.7 8.8 19.0 46.1 2.2 6.0 37.0 4.0 5.0 79.3 1.1 6.4 7.5 3.5 2.5 1.0 1.0 2.8 41.3 11 0 6.6\n",
-      "19\n",
-      "Jayson Tatum\n",
-      "BOS 22 56 40 16 34.6 23.6 8.4 18.8 45.0 2.8 7.1 39.8 3.9 4.8 81.3 1.0 6.1 7.1 3.0 2.3 1.3 0.9 2.0 41.2 10 0 7.8\n",
-      "20\n",
-      "D'Angelo Russell\n",
-      "MIN 24 42 11 31 32.4 23.5 8.2 19.0 43.1 3.6 9.7 37.5 3.5 4.3 80.7 0.4 3.4 3.8 6.5 3.3 1.0 0.3 1.9 38.5 3 0 -6.0\n",
-      "21\n",
-      "Joel Embiid\n",
-      "PHI 25 43 27 16 30.3 23.3 7.5 15.9 47.2 1.3 3.7 34.2 7.0 8.6 81.4 2.7 9.0 11.8 3.1 3.0 0.9 1.3 3.4 45.7 33 0 2.8\n",
-      "22\n",
-      "CJ McCollum\n",
-      "POR 28 59 27 32 35.9 22.5 8.9 19.6 45.2 2.8 7.4 38.4 1.9 2.6 74.7 0.7 3.4 4.1 4.2 1.9 0.7 0.6 2.5 35.9 4 0 0.6\n",
-      "23\n",
-      "DeMar DeRozan\n",
-      "SAS 30 58 25 33 34.2 22.2 8.3 15.7 52.7 0.1 0.5 26.7 5.5 6.6 84.2 0.6 5.0 5.6 5.4 2.4 1.0 0.2 2.7 38.4 5 0 -2.1\n",
-      "24\n",
-      "Andrew Wiggins\n",
-      "GSW 25 51 14 37 34.4 22.0 8.2 18.3 44.7 2.1 6.2 33.1 3.6 5.0 71.9 1.2 3.9 5.1 3.7 2.5 0.9 1.0 2.3 36.7 3 1 -3.5\n",
-      "25\n",
-      "Kemba Walker\n",
-      "BOS 29 47 32 15 32.0 21.7 7.2 16.8 42.8 3.4 8.8 38.6 4.0 4.6 86.9 0.7 3.4 4.1 5.0 2.1 1.0 0.5 1.6 36.4 2 0 4.9\n",
-      "26\n",
-      "John Collins\n",
-      "ATL 22 37 14 23 32.7 21.1 8.5 14.6 57.9 1.5 3.6 40.6 2.8 3.4 81.0 2.7 7.3 10.1 1.5 1.9 0.7 1.6 3.4 40.6 19 0 -4.2\n",
-      "27\n",
-      "Paul George\n",
-      "LAC 29 39 28 11 29.0 21.1 7.0 16.2 43.0 3.3 8.1 40.4 3.8 4.3 88.8 0.5 5.3 5.8 3.8 2.8 1.3 0.5 2.4 36.3 5 0 4.5\n",
-      "28\n",
-      "Khris Middleton\n",
-      "MIL 28 53 44 9 29.8 20.9 7.7 15.2 50.4 2.4 5.6 43.0 3.2 3.5 90.8 0.8 5.5 6.3 4.1 2.0 0.9 0.1 2.2 35.8 5 0 9.6\n",
-      "29\n",
-      "Nikola Jokic\n",
-      "DEN 25 61 41 20 32.4 20.8 8.1 15.2 53.2 1.1 3.5 32.7 3.5 4.3 81.6 2.4 7.8 10.2 6.8 3.0 1.2 0.7 3.0 45.9 37 12 3.8\n",
-      "30\n",
-      "Spencer Dinwiddie\n",
-      "BKN 26 61 27 34 31.2 20.5 6.7 16.1 41.3 1.9 6.3 30.5 5.3 6.8 77.6 0.5 3.0 3.5 6.7 2.7 0.6 0.3 2.8 35.0 9 0 0.5\n",
-      "31\n",
-      "Collin Sexton\n",
-      "CLE 21 62 17 45 32.7 20.5 7.8 16.6 46.7 1.5 4.0 38.6 3.4 4.1 84.5 1.0 2.2 3.1 2.9 2.3 1.0 0.1 2.2 29.6 0 0 -6.6\n",
-      "32\n",
-      "Bojan Bogdanovic\n",
-      "UTA 30 60 39 21 33.3 20.5 6.7 15.0 44.7 3.1 7.4 41.6 4.0 4.5 90.0 0.6 3.5 4.2 2.1 2.5 0.6 0.1 1.8 28.2 0 0 5.0\n",
-      "33\n",
-      "Jaylen Brown\n",
-      "BOS 23 50 33 17 34.0 20.4 7.6 15.4 49.0 2.1 5.6 38.1 3.2 4.3 73.6 1.1 5.3 6.4 2.2 2.3 1.1 0.3 3.0 33.3 6 0 3.9\n",
-      "34\n",
-      "De'Aaron Fox\n",
-      "SAC 22 42 18 24 31.7 20.4 7.4 15.4 47.7 1.1 3.4 31.9 4.6 6.7 68.1 0.7 3.3 4.0 6.7 3.2 1.5 0.5 2.9 37.9 7 0 -1.6\n",
-      "35\n",
-      "Jimmy Butler\n",
-      "MIA 30 52 35 17 34.4 20.3 6.1 13.5 45.4 0.6 2.3 24.8 7.5 9.0 83.2 1.8 4.9 6.8 6.3 2.3 1.7 0.6 1.4 42.3 10 3 4.5\n",
-      "36\n",
-      "Stephen Curry\n",
-      "GSW 31 4 1 3 28.0 20.3 6.8 16.5 40.9 2.3 9.3 24.3 4.5 4.5 100 1.0 4.0 5.0 6.5 3.8 1.3 0.5 2.5 37.5 1 0 -8.0\n",
-      "37\n",
-      "Buddy Hield\n",
-      "SAC 27 61 27 34 32.3 19.9 7.1 16.7 42.7 3.8 9.7 38.7 1.8 2.1 85.5 0.9 4.0 4.9 3.1 2.3 0.9 0.3 2.4 31.6 2 0 -0.8\n",
-      "38\n",
-      "Kristaps Porzingis\n",
-      "DAL 24 48 29 19 31.1 19.5 6.7 15.8 42.7 2.5 7.1 35.7 3.5 4.6 77.6 1.7 7.7 9.4 1.7 1.6 0.7 2.0 3.0 39.9 22 0 5.5\n",
-      "39\n",
-      "Julius Randle\n",
-      "NYK 25 60 19 41 32.6 19.4 7.2 15.8 45.6 1.0 3.7 27.0 4.0 5.5 72.2 2.4 7.4 9.8 3.2 3.0 0.8 0.4 2.7 36.3 28 0 -3.5\n",
-      "40\n",
-      "Nikola Vucevic\n",
-      "ORL 29 51 22 29 32.5 19.4 7.9 16.9 46.6 1.6 4.8 32.9 2.1 2.6 77.8 2.4 8.5 10.9 3.7 1.4 0.9 0.9 2.2 41.9 33 0 -0.5\n",
-      "41\n",
-      "Kyle Lowry\n",
-      "TOR 33 49 33 16 36.5 19.4 5.8 14.2 41.2 2.8 8.1 34.9 4.9 5.6 86.2 0.6 4.2 4.8 7.6 3.0 1.3 0.4 3.2 38.8 13 2 4.5\n",
-      "42\n",
-      "Shai Gilgeous-Alexander\n",
-      "OKC 21 62 38 24 35.4 19.3 7.0 14.9 47.1 1.2 3.5 35.2 4.0 5.0 80.1 0.7 5.4 6.1 3.3 1.9 1.1 0.7 1.7 35.2 9 1 2.2\n",
-      "43\n",
-      "Jrue Holiday\n",
-      "NOP 29 53 22 31 34.9 19.2 7.6 16.9 44.7 2.1 5.8 35.3 2.0 2.9 69.7 1.2 3.5 4.8 6.9 2.9 1.7 0.8 2.2 39.7 10 1 0.2\n",
-      "44\n",
-      "Tobias Harris\n",
-      "PHI 27 62 37 25 34.6 19.2 7.5 15.9 47.4 1.8 4.9 36.4 2.3 2.9 80.1 0.8 5.9 6.7 3.1 1.5 0.8 0.5 2.3 34.4 9 0 1.9\n",
-      "45\n",
-      "Danilo Gallinari\n",
-      "OKC 31 53 31 22 30.7 19.2 6.0 13.6 43.9 3.0 7.4 41.0 4.2 4.8 88.9 0.6 5.0 5.6 2.1 1.3 0.8 0.1 1.2 30.2 3 0 3.2\n",
-      "46\n",
-      "Lou Williams\n",
-      "LAC 33 58 40 18 29.5 19.1 6.3 14.9 41.9 1.8 5.0 36.6 4.7 5.5 86.2 0.5 2.6 3.1 5.8 2.9 0.7 0.2 1.3 31.1 2 0 3.6\n",
-      "47\n",
-      "Deandre Ayton\n",
-      "PHX 21 30 12 18 33.2 19.0 8.5 15.5 54.8 0.0 0.1 0.0 2.0 2.6 76.9 4.1 7.9 12.0 1.9 2.4 0.7 1.7 3.2 41.2 20 0 1.2\n",
-      "48\n",
-      "Dennis Schroder\n",
-      "OKC 26 61 37 24 30.9 19.0 7.0 14.9 47.0 1.9 5.0 38.1 3.0 3.6 84.9 0.3 3.4 3.7 4.0 2.6 0.6 0.2 2.2 29.5 0 0 3.7\n",
-      "49\n",
-      "Evan Fournier\n",
-      "ORL 27 61 26 35 31.7 18.8 6.7 14.2 47.0 2.7 6.7 40.6 2.8 3.4 82.0 0.3 2.3 2.6 3.2 2.0 1.1 0.2 2.4 28.8 0 0 -2.0\n",
-      "50\n",
-      "LaMarcus Aldridge\n",
-      "SAS 34 52 22 30 33.0 18.8 7.3 14.8 49.5 1.2 2.9 39.2 3.0 3.6 82.9 2.0 5.5 7.5 2.4 1.4 0.6 1.6 2.4 36.7 14 0 -2.6\n"
+     "ename": "InvalidSessionIdException",
+     "evalue": "Message: invalid session id\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidSessionIdException\u001b[0m                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-385-293a13164a8b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_elements_by_class_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'nba-stat-table__overflow'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# a = [PLAYER........., ] (只有一個值)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mfind_elements_by_class_name\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    578\u001b[0m             \u001b[0melements\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_elements_by_class_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'foo'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    579\u001b[0m         \"\"\"\n\u001b[1;32m--> 580\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCLASS_NAME\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    581\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    582\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfind_element_by_css_selector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcss_selector\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mfind_elements\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m   1005\u001b[0m         return self.execute(Command.FIND_ELEMENTS, {\n\u001b[0;32m   1006\u001b[0m             \u001b[1;34m'using'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mby\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1007\u001b[1;33m             'value': value})['value'] or []\n\u001b[0m\u001b[0;32m   1008\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1009\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 321\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[0;32m    323\u001b[0m                 response.get('value', None))\n",
+      "\u001b[1;32mD:\\anaconda\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'alert'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    241\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 242\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    243\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    244\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mInvalidSessionIdException\u001b[0m: Message: invalid session id\n"
      ]
     }
    ],
@@ -220,7 +91,7 @@
     "#抓出player與其他資料\n",
     "print(d[5:7]) #第一列\n",
     "#找出最後一列的index\n",
-    "print(i+3*49)\n",
+    "print(2+3*49)\n",
     "print(d[149:151]) #最後一列"
    ]
   },
