--- a/HomeWork/HW7.ipynb
+++ b/HomeWork/HW7.ipynb
@@ -473,7 +473,7 @@
    "outputs": [],
    "source": [
     "model.add(Dense(100, input_dim = 784, activation = \"relu\"))\n",
-    "#relu: 介於0~無線道之間，忽略負值"
+    "#relu: 介於無限大之間，忽略負值"
    ]
   },
   {
